--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
                 
                 <div class="modal-check-wrapper">
                     <div class="modal-disclaimer-wrapper">
-                        <input type="checkbox" value="accepted" id="checkbox" name="checkbox" required>
+                        <input type="checkbox" value="accepted" id="checkbox" name="checkbox" class="modal-form-policy visually-hidden" required>
                         <label for="checkbox" class="modal-check-label spacing">Oświadczam iż akceptuję <a href="#"
                             class="modal-policy spacing">Regulamin</a> i <a href="#" class="modal-policy spacing">Politykę
                             Prywatności.</a></label>
